dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    meta.helm.sh/release-name: ofppt
    meta.helm.sh/release-namespace: ofppt
  creationTimestamp: "2023-05-07T09:36:21Z"
  generation: 1
  labels:
    app.kubernetes.io/managed-by: Helm
  name: ofppt-workflow-frontend
  namespace: ofppt
  resourceVersion: "960207"
  uid: 287ae5a2-db7d-48ad-bcb6-2eb79692ef6c
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: ofppt-workflow-frontend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: ofppt-workflow-frontend
    spec:
      containers:
      - env:
        - name: BASE_URL
          value: https://ofppt.rifnology.com/api/
        - name: BASE_URL_IMG
          value: https://ofppt.rifnology.com/
        - name: BASE_HREF
          value: /ofppt/
        image: oassaghir/workflow-frontend:latest
        imagePullPolicy: Always
        name: ofppt-workflow-frontend
        readinessProbe:
          failureThreshold: 3
          httpGet:
            host: app.rifnology.com/ofppt
            port: 443
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 1
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  conditions:
  - lastTransitionTime: "2023-05-07T09:36:21Z"
    lastUpdateTime: "2023-05-07T09:36:21Z"
    message: Deployment does not have minimum availability.
    reason: MinimumReplicasUnavailable
    status: "False"
    type: Available
  - lastTransitionTime: "2023-05-07T09:36:21Z"
    lastUpdateTime: "2023-05-07T09:36:21Z"
    message: ReplicaSet "ofppt-workflow-frontend-7f5857576d" is progressing.
    reason: ReplicaSetUpdated
    status: "True"
    type: Progressing
  observedGeneration: 1
  replicas: 1
  unavailableReplicas: 1
  updatedReplicas: 1
